src/drive/styles/actionmenu.styl
@require 'settings/palette.styl'
@require 'settings/z-index.styl'
@require 'components/popover.styl'

.fil-actionmenu-inner
    @extend    $popover
    z-index    $file-action-menu
    position   absolute
    margin     0
    margin-top rem(1)
    min-width  rem(220)
    overflow   hidden
    border     0
    color      var(--charcoalGrey)

    .fil-actionmenu-recipients
        display none

.fil-actionmenu-inner
    .fil-action:hover
        background-color var(--paleGrey)
    .fil-action:active
        background-color var(--silver)

.fil-actionmenu-overlay
  opacity 0
  -webkit-tap-highlight-color rgba(0,0,0,0)

.fil-mobileactionmenu
    color      var(--charcoalGrey)
    hr
        margin-top 0

.fil-mobileactionmenu-header
    font-weight bold
    max-width 100%
    display flex 

.fil-mobileactionmenu-file-name
    overflow hidden
    text-overflow ellipsis
    white-space   nowrap
    max-width 70%

.fil-mobileactionmenu-file-ext
    color var(--coolGrey)
.fil-mobileactionmenu-category
    padding-left rem(4)
    line-height rem(18)


.fil-actionmenu-recipients
    position absolute
    right    1rem
    top      .1rem

